--- a/package.json
+++ b/package.json
@@ -6,26 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "validate": "npm run lint && npx tsc && npm run test"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
-    "@notionhq/client": "^2.2.10",
+    "@notionhq/client": "^0.4.12",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@uiw/react-markdown-preview": "^4.1.14",
+    "markdown-to-jsx": "^7.2.1",
     "axios": "^1.4.0",
-    "eslint": "8.46.0",
+    "eslint": "^8.44.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
-    "notion-to-md": "^3.1.1",
+    "notion-to-md": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.64.2",
-    "typescript": "5.1.6"
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.1",
+    "ajv": "^7.2.4",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "13.4.12",
+    "typescript": "4.5.5"
   }
 }
