--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@uiw/react-markdown-preview": "^4.1.14",
-    "markdown-to-jsx": "^7.2.1",
     "axios": "^1.4.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.12",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.4.12",
     "notion-to-md": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.64.2",
+    "ts-loader": "^9.4.4",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
