--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.4.12",
     "markdown-to-jsx": "^7.2.1",
     "next": "13.4.12",
+    "next-remove-imports": "^1.0.12",
     "notion-to-md": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
