--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.12",
     "markdown-to-jsx": "^7.2.1",
-    "next": "^13.4.12",
+    "next": "^14.0.4",
     "next-remove-imports": "^1.0.12",
     "notion-to-md": "^2.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.64.2",
     "ts-loader": "^9.4.4",
     "typescript": "^4.9.5"
