--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "notion-to-md": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "sass": "^1.64.2",
     "ts-loader": "^9.4.4",
     "typescript": "^4.9.5"
